change welcome page

--- a/informaionUDB/Views/Home/Index.cshtml
+++ b/informaionUDB/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Here you can learn how to create asp.net core website    with shehrman ibrahim</p>
+   
+    <img src="~/Images/469407_1.jpg" />
 </div>
