--- a/informaionUDB/Views/Docktors/Index.cshtml
+++ b/informaionUDB/Views/Docktors/Index.cshtml
@@ -23,12 +23,15 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.Lastname)
+
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+        </td>
+         
         </tr>
 }
     </tbody>
